# backend-templates

./: .gitignore  README.md
fastapi/: Dockerfile  docker-compose.yml  pyproject.toml
fastapi/.github/workflows/: lint.yml
fastapi/app/: __init__.py  main.py
fastapi/app/core/: config.py
fastapi/app/middleware/: __init__.py  prometheus.py
fastapi/app/routers/: __init__.py  health.py  metrics.py
fastapi/app/routers/api/: __init__.py
fastapi/app/routers/api/v1/: __init__.py
go-fiber/: .gitignore  Caddyfile  Dockerfile  README.md  cookies.go  docker-compose.yml  go.mod  go.sum  routes.go  server.go
go-fiber/.github/workflows/: lint.yml
go-fiber/core/: config.go  redis.go
go-fiber/views/: 404.html
langgraph_consumer/: .gitignore  Dockerfile  README.md  docker-compose.yml  langgraph.json  main.py  pyproject.toml
langgraph_consumer/app/core/: config.py
langgraph_consumer/app/graphs/: chain.py  main.py
langgraph_consumer/app/graphs/tools/: calculator.py
langgraph_consumer/app/worker/: tasks.py
