[project]
name = "langgraph-consumer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.3",
    "flower>=2.0.1",
    "langchain>=1.0.5",
    "langgraph>=1.0.3",
    "langgraph-api>=0.5.13",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "redis>=7.0.1",
]
